kubernetes/apps/paperless-ngx/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups: [65568]
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data-pvc
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media-pvc
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export-pvc
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume-pvc
        - name: run
          emptyDir: {}
      containers:
        - name: webserver
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0@sha256:6b94799bc769a063b3340cc5847402e626d4d91d29a295a8e747f8e9bead4207
          ports:
            - containerPort: 8000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless-ngx/data
            - name: media
              mountPath: /usr/src/paperless-ngx/media
            - name: export
              mountPath: /usr/src/paperless-ngx/export
            - name: consume
              mountPath: /usr/src/paperless-ngx/consume
            - name: run
              mountPath: /run
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: "1.5Gi"
              cpu: "1000m"
