kubernetes/apps/paperless-ngx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
